--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,7 @@ downloads/
 
 # IDE specific files
 .idea/
+project_specs.md
 .vscode/
 *.swp
 *.swo
@@ -79,4 +80,4 @@ Thumbs.db
 *.pkl
 *.h5
 *.joblib
-*.model
+*.modelproject_specs.md
